--- a/style.css
+++ b/style.css
@@ -193,6 +193,13 @@ hr{
 .footer-bottom p {
     color: #000;
 }
+.designer{
+    opacity: 0.7;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    margin: 0 5px;
+}
 
 /* css for small screens */
 @media only screen and (max-width: 800px){
@@ -209,5 +216,8 @@ hr{
     }
     .tooltip-text{
         font-size: 12px;
+    }
+    #details{
+        margin: 0;
     }
 }
