--- a/style.css
+++ b/style.css
@@ -217,7 +217,15 @@ hr{
     .tooltip-text{
         font-size: 12px;
     }
-    #details{
-        margin: 0;
+    .details-content{
+        margin: 1.25em 3.1em 0.6em 2.5em;
+        width: 300px;
+        text-align:start;
+    }
+    cookie-dip-img{
+        width:200px;
+        height: 250px;
+        margin: auto;
+        align-items: center;
     }
 }
